fix text not showing

--- a/client/src/Components/Home.scss
+++ b/client/src/Components/Home.scss
@@ -48,6 +48,7 @@ p {
 
 p.card-text {
   font-size: 25px;
+  color: black;
 }
 
 
